Docs: Fix example hook function
Calling file-in-directory-p with a nil buffer-file-name can cause
errors that manifest in very strange ways, like causing Org Babel
source blocks to fail to evaluate.

--- a/README.org
+++ b/README.org
@@ -17,6 +17,7 @@ Because of these characteristics, it's simple and lightweight.  To use, just, e.
 #+begin_src elisp
   (add-hook 'org-mode-hook
             (lambda ()
-              (when (file-in-directory-p (buffer-file-name) "~/org")
-                (salv-mode))))
+              (when (and (buffer-file-name)
+                         (file-in-directory-p (buffer-file-name) org-directory))
+                (salv-mode 1))))
 #+end_src
